--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TeamSync | B2B Project Managment Platform</title>
+    <title>Taskflowx Project Managment Platform</title>
   </head>
   <body>
     <div id="root"></div>
